--- a/Posto.Infrastructure/Posto.Infrastructure.csproj
+++ b/Posto.Infrastructure/Posto.Infrastructure.csproj
@@ -5,10 +5,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190731023158_PostoInicial.cs" />
+    <Compile Remove="Migrations\20190731023158_PostoInicial.Designer.cs" />
+    <Compile Remove="Migrations\20190822214152_empresa.cs" />
+    <Compile Remove="Migrations\20190822214152_empresa.Designer.cs" />
+    <Compile Remove="Migrations\20190825044649_usuarioTable.cs" />
+    <Compile Remove="Migrations\20190825044649_usuarioTable.Designer.cs" />
+    <Compile Remove="Migrations\20190825045746_identityUser.cs" />
+    <Compile Remove="Migrations\20190825045746_identityUser.Designer.cs" />
+    <Compile Remove="Migrations\20190828225643_perfilUsuario.cs" />
+    <Compile Remove="Migrations\20190828225643_perfilUsuario.Designer.cs" />
+    <Compile Remove="Migrations\20190830212903_cnpjEmpresa.cs" />
+    <Compile Remove="Migrations\20190830212903_cnpjEmpresa.Designer.cs" />
+    <Compile Remove="Migrations\20190830220925_EmpresaUsuario.cs" />
+    <Compile Remove="Migrations\20190830220925_EmpresaUsuario.Designer.cs" />
+    <Compile Remove="Migrations\20190831173759_ativoEmpresa.cs" />
+    <Compile Remove="Migrations\20190831173759_ativoEmpresa.Designer.cs" />
+    <Compile Remove="Migrations\20190902005418_endereco.cs" />
+    <Compile Remove="Migrations\20190902005418_endereco.Designer.cs" />
     <Compile Remove="Migrations\20190904031630_cliente.cs" />
     <Compile Remove="Migrations\20190904031630_cliente.Designer.cs" />
     <Compile Remove="Migrations\20190904032535_cliente.cs" />
     <Compile Remove="Migrations\20190904032535_cliente.Designer.cs" />
+    <Compile Remove="Migrations\20190904032844_cliente.cs" />
+    <Compile Remove="Migrations\20190904032844_cliente.Designer.cs" />
     <Compile Remove="Migrations\20190904040840_Tecnico.cs" />
     <Compile Remove="Migrations\20190904040840_Tecnico.Designer.cs" />
     <Compile Remove="Migrations\20190904041005_Tecnico.cs" />
@@ -31,6 +51,16 @@
     <Compile Remove="Migrations\20190905010004_emailPhoneCliente.Designer.cs" />
     <Compile Remove="Migrations\20190905010429_emailPhoneCliente.cs" />
     <Compile Remove="Migrations\20190905010429_emailPhoneCliente.Designer.cs" />
+    <Compile Remove="Migrations\20190905015626_emailPhoneCliente.cs" />
+    <Compile Remove="Migrations\20190905015626_emailPhoneCliente.Designer.cs" />
+    <Compile Remove="Migrations\20190906211847_ClienteSemEndereco.cs" />
+    <Compile Remove="Migrations\20190906211847_ClienteSemEndereco.Designer.cs" />
+    <Compile Remove="Migrations\20190907125756_tecnicoupdate.cs" />
+    <Compile Remove="Migrations\20190907125756_tecnicoupdate.Designer.cs" />
+    <Compile Remove="Migrations\20190907130253_tecnicoSemNome.cs" />
+    <Compile Remove="Migrations\20190907130253_tecnicoSemNome.Designer.cs" />
+    <Compile Remove="Migrations\20190907134117_Programacao_PreventivaTecnico.cs" />
+    <Compile Remove="Migrations\20190907134117_Programacao_PreventivaTecnico.Designer.cs" />
     <Compile Remove="Migrations\20190907205833_SerieProduto.cs" />
     <Compile Remove="Migrations\20190907205833_SerieProduto.Designer.cs" />
     <Compile Remove="Migrations\20190907210203_SerieProduto.cs" />
@@ -41,18 +71,68 @@
     <Compile Remove="Migrations\20190907211612_SerieProduto.Designer.cs" />
     <Compile Remove="Migrations\20190907222305_SerieProduto.cs" />
     <Compile Remove="Migrations\20190907222305_SerieProduto.Designer.cs" />
+    <Compile Remove="Migrations\20190907223308_SerieProduto.cs" />
+    <Compile Remove="Migrations\20190907223308_SerieProduto.Designer.cs" />
+    <Compile Remove="Migrations\20190908000842_SerieAtivo.cs" />
+    <Compile Remove="Migrations\20190908000842_SerieAtivo.Designer.cs" />
+    <Compile Remove="Migrations\20190908091340_idSerieEmProduto.cs" />
+    <Compile Remove="Migrations\20190908091340_idSerieEmProduto.Designer.cs" />
+    <Compile Remove="Migrations\20190908094820_removendoSerieProduto.cs" />
+    <Compile Remove="Migrations\20190908094820_removendoSerieProduto.Designer.cs" />
+    <Compile Remove="Migrations\20190908131806_Imagem.cs" />
+    <Compile Remove="Migrations\20190908131806_Imagem.Designer.cs" />
     <Compile Remove="Migrations\20190908140356_ClienteSerie.cs" />
     <Compile Remove="Migrations\20190908140356_ClienteSerie.Designer.cs" />
     <Compile Remove="Migrations\20190908140547_ClienteSerie.cs" />
     <Compile Remove="Migrations\20190908140547_ClienteSerie.Designer.cs" />
     <Compile Remove="Migrations\20190908141111_ClienteSerie.cs" />
     <Compile Remove="Migrations\20190908141111_ClienteSerie.Designer.cs" />
+    <Compile Remove="Migrations\20190908163154_ClienteSerie.cs" />
+    <Compile Remove="Migrations\20190908163154_ClienteSerie.Designer.cs" />
+    <Compile Remove="Migrations\20190909013634_Chamado.cs" />
+    <Compile Remove="Migrations\20190909013634_Chamado.Designer.cs" />
+    <Compile Remove="Migrations\20190909034631_ChamadoImagem.cs" />
+    <Compile Remove="Migrations\20190909034631_ChamadoImagem.Designer.cs" />
+    <Compile Remove="Migrations\20190909050637_ChamadoImagemNullable.cs" />
+    <Compile Remove="Migrations\20190909050637_ChamadoImagemNullable.Designer.cs" />
     <Compile Remove="Migrations\20190910212953_errorMigration.cs" />
     <Compile Remove="Migrations\20190910212953_errorMigration.Designer.cs" />
+    <Compile Remove="Migrations\20190910222840_SubConjunto.cs" />
+    <Compile Remove="Migrations\20190910222840_SubConjunto.Designer.cs" />
+    <Compile Remove="Migrations\20190910231515_serieSubConjunto.cs" />
+    <Compile Remove="Migrations\20190910231515_serieSubConjunto.Designer.cs" />
     <Compile Remove="Migrations\20190911162204_SerieSubConjuntoLigacao.cs" />
     <Compile Remove="Migrations\20190911162204_SerieSubConjuntoLigacao.Designer.cs" />
+    <Compile Remove="Migrations\20190913221945_ChamadoSubConjunto.cs" />
+    <Compile Remove="Migrations\20190913221945_ChamadoSubConjunto.Designer.cs" />
+    <Compile Remove="Migrations\20190915020713_ChamadoProduto.cs" />
+    <Compile Remove="Migrations\20190915020713_ChamadoProduto.Designer.cs" />
+    <Compile Remove="Migrations\20190915033109_nomeCliente.cs" />
+    <Compile Remove="Migrations\20190915033109_nomeCliente.Designer.cs" />
+    <Compile Remove="Migrations\20190917045008_nomesChamado.cs" />
+    <Compile Remove="Migrations\20190917045008_nomesChamado.Designer.cs" />
+    <Compile Remove="Migrations\20190923055801_tecnicoIdEmpresa.cs" />
+    <Compile Remove="Migrations\20190923055801_tecnicoIdEmpresa.Designer.cs" />
+    <Compile Remove="Migrations\20190923225420_nomeTecnico.cs" />
+    <Compile Remove="Migrations\20190923225420_nomeTecnico.Designer.cs" />
+    <Compile Remove="Migrations\20190924231532_idSerieChamado.cs" />
+    <Compile Remove="Migrations\20190924231532_idSerieChamado.Designer.cs" />
+    <Compile Remove="Migrations\20190928191803_perfilImagem.cs" />
+    <Compile Remove="Migrations\20190928191803_perfilImagem.Designer.cs" />
+    <Compile Remove="Migrations\20190929010418_SemPerfilImagem.cs" />
+    <Compile Remove="Migrations\20190929010418_SemPerfilImagem.Designer.cs" />
+    <Compile Remove="Migrations\20191027223034_TrocaDeNomeTabelas.cs" />
+    <Compile Remove="Migrations\20191027223034_TrocaDeNomeTabelas.Designer.cs" />
+    <Compile Remove="Migrations\20191029232022_Distribuidora.cs" />
+    <Compile Remove="Migrations\20191029232022_Distribuidora.Designer.cs" />
     <Compile Remove="Migrations\20191104032803_FK_DistribuidoraUsuario.cs" />
     <Compile Remove="Migrations\20191104032803_FK_DistribuidoraUsuario.Designer.cs" />
+    <Compile Remove="Migrations\20191108045136_SerieToEquipamento.cs" />
+    <Compile Remove="Migrations\20191108045136_SerieToEquipamento.Designer.cs" />
+    <Compile Remove="Migrations\20191110193942_corretiva.cs" />
+    <Compile Remove="Migrations\20191110193942_corretiva.Designer.cs" />
+    <Compile Remove="Migrations\20191111042639_razaoEmpresa.cs" />
+    <Compile Remove="Migrations\20191111042639_razaoEmpresa.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
